# image-to-ascii

./: .gitignore  CMakeLists.txt  PreLoad.cmake  README.md  anotations  build.js  output.txt
include/: arguments.h  bitmap.h  bmp.h  bmp2rgb.h  console.h  fs.h  image.h  image_struct.h  player.h  quick.h  string-util.h  threads.h  time.h  util.h
multiple_input/output/: 0058.txt  0159.txt  0234.txt  0375.txt  0450.txt  0497.txt  0543.txt  0680.txt  0795.txt  0846.txt  0869.txt  0959.txt  1026.txt  1116.txt  1255.txt  1262.txt  1284.txt  1420.txt  1463.txt  1683.txt  1685.txt  1833.txt  1977.txt  2273.txt  2695.txt  3304.txt  3417.txt
src/: args.c  arguments.c  bitmap.c  bmp.c  bmp2rgb.c  console.c  convert.c  fs.c  image.c  main.c  player.c  quick.c  string.c  threads.c
test/: README.md  bmp2rgb_struct.c  bmp2rgb_txt.c  bmp2rgb_txt_old.c  bmp2rgb_txt_test.c  output.txt  padding.c  player_time.c  read_bmp_data.c  rgbbin2reader.c  sort_by_alphabet_argv.c  strncpy_of_my_struct.c  test_bmp2rgb_struct.c  testbmpopen.js
test/example_struct/: bmp2bin_rgb_struct.c
test/learn/: README.md  read_bmp_data.c  testbmpopen_original_from_slackoverflow.c
test/old/: README.md
test/old/example_struct/: bin_rgb_struct2console.c  bmp2bin_rgb_struct.c
test/old/rgb2char/: rgb2char_console.c  rgb2char_txt.c
